--- a/sass/ui/card/_core.scss
+++ b/sass/ui/card/_core.scss
@@ -15,7 +15,7 @@
 @import '../../spacing/mixins';
 @import '../../spacing/placeholders';
 
-@import '../nav/bar/variables';
+@import '../nav/navbar/variables';
 @import '../button/variables';
 
 @import 'variables';
