--- a/sass/_variables.scss
+++ b/sass/_variables.scss
@@ -1,5 +1,8 @@
+// Constants
 $MAX-Z-INDEX: 2147483647;
 $MAX-PX: 10000000px;
+
+// Transition timings
 $FAST: 0.13s !default;
 $MED: 0.33s !default;
 $SLOW: 0.5s !default;
@@ -8,13 +11,6 @@ $SLOW: 0.5s !default;
 $border-width: 1px !default;
 $border-style: solid !default;
 $border-radius: 2px;
-
-// Disabled links
-$disabled-link-color: $dark-border !default;
-
-// Dividers
-$divider-color: $border !default;
-$divider-height: 1px !default;
 
 
 // Responsive media queries
