--- a/sass/columns/_layout.scss
+++ b/sass/columns/_layout.scss
@@ -3,51 +3,16 @@
     display: block;
   }
 
-
+  /**
   #{$columns-class} > * {
     display: inline-block;
     width: 100%;
   }
-
-
-  #{$columns-class}--center {
-    margin-left: auto;
-    margin-right: auto;
-    text-align: center;
-  }
-
-
-  .no-csscolumns #{$columns-class} > * {
-    float: left;
-    width: $columns-width;
-    display: inline-block;
-  }
-
-  .no-csscolumns #{$columns-class} {
-    &:before, &:after {
-        content: " ";
-        display: table;
-    }
-    &:after {
-        clear: both;
-    }
-  }
-
+  */
 
   @for $x from 1 through $columns-count-max {
     #{$columns-class}--#{$x} {
       @extend %#{$columns-name}--#{$x};
-    }
-  }
-
-
-  @for $x from 1 through $columns-count-max {
-    .no-csscolumns #{$columns-class}--#{$x} > * {
-      float: left;
-      $width: 1 / $x;
-      $width: percentage($width);
-      width: $width;
-      max-width: $width;
     }
   }
 
@@ -58,14 +23,6 @@
 
       #{$columns-class} {
         @include columns($gutter-size: $gutter-size);
-      }
-
-      .no-csscolumns #{$columns-class} {
-        padding-left: $gutter-size;
-      }
-
-      .no-csscolumns #{$columns-class} > * {
-        padding: 0 $gutter-size 0 0;
       }
     }
   }
