--- a/sass/curls.scss
+++ b/sass/curls.scss
@@ -6,11 +6,11 @@
  ***                                                     (c) 2016 Jared Lunde *
  ***                                                                          *
  ******************************************************************************/
+@import 'resets/core';
+
 @import 'core';
 
-@import 'resets';
-
-@import 'basics';
+@import 'basics/core';
 
 @import 'flexibility/core';
 
