--- a/sass/type/_variables.scss
+++ b/sass/type/_variables.scss
@@ -8,6 +8,8 @@ $body-font-size: 16px !default;
 $body-font-color: $grey !default;
 $body-line-height: 1.1 !default;
 $body-font-weight: 300 !default;
+$body-letter-spacing: inherit !default;
+
 
 
 // Headings */
@@ -16,6 +18,7 @@ $heading-color: $grey !default;
 $heading-font-weight: 300 !default;
 $heading-text-align: left !default;
 $heading-line-height: 1.1 !default;
+$heading-letter-spacing: inherit !default;
 $heading-size: (
   h1: 48px,
   h2: 36px,
@@ -33,7 +36,7 @@ $paragraph-margin: 0 0 1.2 !default;
 $paragraph-font: -apple-system, BlinkMacSystemFont, "Roboto", "Segoe UI", "Helvetica Neue", Arial, sans-serif !default;
 $paragraph-font-size: 16px !default;
 $paragraph-line-height: 1.4 !default;
-$paragraph-letter-spacing: initial !default;
+$paragraph-letter-spacing: inherit !default;
 $paragraph-font-color: inherit !default;
 $paragraph-font-weight: 300 !default;
 $paragraph-text-align: left !default;
