--- a/sass/flexibility/_variables.scss
+++ b/sass/flexibility/_variables.scss
@@ -7,4 +7,4 @@ $FLEX-ALIGN-CONTENT: (top, bottom, center, stretch, between, around);
 $FLEX-ALIGN-SELF: (top, bottom, center, baseline, stretch);
 $FLEX-JUSTIFY: (left, right, center, around, between);
 $FLEX-BASE: (fixed, fluid, first, last, grow, shrink, x-reverse, y-reverse,
-             wrap-reverse, nowrap);
+             wrap-reverse, nowrap, x, y);
