--- a/sass/ui/_core.scss
+++ b/sass/ui/_core.scss
@@ -9,3 +9,12 @@
 
 /** Card (.card) */
 @import 'card/core';
+
+/** List (.list) **/
+@import 'list/core';
+
+/** Popover (.popover) **/
+@import 'popover/core';
+
+/** Tooltip (.tooltip) **/
+@import 'tooltip/core';
