--- a/sass/ui/list/_core.scss
+++ b/sass/ui/list/_core.scss
@@ -1,7 +1,7 @@
 /**
- ** Checkbox
+ ** Card (.card)
  **/
-@import '../../../core';
+@import '../../core';
 
 @import 'variables';
 @import 'layout';
