--- a/sass/grid/_placeholders.scss
+++ b/sass/grid/_placeholders.scss
@@ -1,7 +1,7 @@
 @include import-once('grid-placeholders') {
   %#{$grid-row-name} {
     @extend %#{$flex-name};
-    @extend %#{$flex-name}--nowrap;
+    @extend %#{$flex-name}--wrap;
     @extend %#{$flex-name}--x;
     @include flex-basis(100%);
     @include break-for(gutters--x); // Gutters
