--- a/sass/ui/nav/dropdown/_layout.scss
+++ b/sass/ui/nav/dropdown/_layout.scss
@@ -4,13 +4,13 @@
     @extend %#{$flex-name}--y-center;
     position: relative;
 
-    &.dropped {
+    &#{$dropdown-class}--dropped {
       #{$dropdown-class}__menu {
-        @extend %drop-out--fast;
         top: 100%;
         margin-top: -3px;
         visibility: visible;
         opacity: 1.0;
+        @include drop-out($VERY-FAST);
       }
     }
   }
@@ -47,7 +47,7 @@
   }
 
 
-  .dropped #{$dropdown-class}__caret {
+  #{$dropdown-class}--dropped #{$dropdown-class}__caret {
     top: -1px;
     @include transform(rotate(180deg));
   }
@@ -77,8 +77,8 @@
   }
 
 
-  #{$dropdown-class}.dropped #{$dropdown-class}__toggler,
-  .no-touchevents #{$dropdown-class}.dropped #{$dropdown-class}__toggler:hover {
+  #{$dropdown-class}#{$dropdown-class}--dropped #{$dropdown-class}__toggler,
+  .no-touchevents #{$dropdown-class}#{$dropdown-class}--dropped #{$dropdown-class}__toggler:hover {
     @extend %#{$dropdown-name}__toggler--active;
   }
 
@@ -95,9 +95,8 @@
 
 
   #{$dropdown-class}__menu {
-    @extend %absolute-top;
     @extend %hardware-accel;
-    @extend %drop-in--fast;
+    @extend %absolute-top;
     visibility: hidden;
     background: $dropdown-background;
     border-color: $dropdown-border-color;
@@ -115,6 +114,7 @@
     -webkit-overflow-scrolling: touch;
     opacity: 0.0;
     @include box-shadow($dropdown-shadow);
+    @include drop-in($VERY-FAST);
 
     li {
       a {
