--- a/sass/ui/tooltip/_variables.scss
+++ b/sass/ui/tooltip/_variables.scss
@@ -1,12 +1,12 @@
-$tooltip-name: tooltip;
-$tooltip-class: '.#{$tooltip-name}';
+$tooltip-name: tooltip !default;
+$tooltip-class: '.#{$tooltip-name}' !default;
 
-$tooltip-font-color: $white;
-$tooltip-font-size: map-get($type-font-size, s);
-$tooltip-font-weight: 400;
-$tooltip-line-height: 1.1;
+$tooltip-font-color: $white !default;
+$tooltip-font-size: map-get($type-font-size, s) !default;
+$tooltip-font-weight: 400 !default;
+$tooltip-line-height: 1.1 !default;
 
-$tooltip-background: $black !default;
+$tooltip-background: $dark-grey !default;
 $tooltip-border-width: $border-width !default;
 $tooltip-border-color: transparent !default;
 $tooltip-border-style: auto !default;
